--- a/_posts/2018-08-01-Jekyll自动生成站点地图.md
+++ b/_posts/2018-08-01-Jekyll自动生成站点地图.md
@@ -4,7 +4,7 @@ title:      Jekyll自动生成站点地图
 subtitle:   手把手教你生成站点地图
 date:       2018-08-01
 author:     LZP[原创]
-header-img: img/post-bg-desk.jpg
+header-img: img/bg-it3.jpg
 catalog: true
 tags:
     - Jekyll
