--- a/_posts/2017-02-07-为博客添加-Gitalk-评论插件.md
+++ b/_posts/2017-02-07-为博客添加-Gitalk-评论插件.md
@@ -4,7 +4,7 @@ title:      为博客添加 Gitalk 评论插件
 subtitle:   BY Blog 添加 Gitalk 的评论插件了
 date:       2017-02-07
 author:     BY
-header-img: img/post-bg-universe.jpg
+header-img: img/bg-it2.jpg
 catalog: true
 tags:
     - Blog
