--- a/_posts/2017-02-16-Git-代码回滚.md
+++ b/_posts/2017-02-16-Git-代码回滚.md
@@ -4,7 +4,7 @@ title:      Git 代码回滚
 subtitle:   回滚代码的正确姿势
 date:       2017-02-16
 author:     BY
-header-img: img/post-bg-debug.png
+header-img: img/bg-it3.png
 catalog: true
 tags:
     - Github
