增加发布信息

--- a/_posts/2018-08-02-实用Markdown实践指南.md
+++ b/_posts/2018-08-02-实用Markdown实践指南.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      实用Markdown实践指南
+subtitle:   手把手教你用Markdown轻量标记语言写文章
+date:       2018-08-02
+author:     LZP[原创]
+header-img: img/bg-it3.jpg
+catalog: true
+tags:
+    - Markdown
+---
+
 #实用Markdown实践指南
 [toc]
 
