增加新文章

--- a/_posts/2018-08-02-实用Markdown实践指南.md
+++ b/_posts/2018-08-02-实用Markdown实践指南.md
@@ -8,15 +8,15 @@ header-img: img/bg-it3.jpg
 catalog: true
 tags:
     - Markdown
+    - 标记语言
 ---
 
 #实用Markdown实践指南
-[toc]
 
 ##目录
 >目录可以用[toc]，直接生成；（需要使用标题格式，以便于索引）
 
----
+----
 
 ##标题
 
@@ -356,3 +356,5 @@ left  | center | right
 网址：http://github.github.com/github-flavored-markdown/。
 
 ---
+
+###本文档用Markdown写成！
