完善章节标题

--- a/_posts/2018-08-02-实用Markdown实践指南.md
+++ b/_posts/2018-08-02-实用Markdown实践指南.md
@@ -11,9 +11,6 @@ tags:
     - 标记语言
 ---
 
-# 实用Markdown实践指南
-
-[toc]
 
 ## 目录
 
@@ -36,7 +33,7 @@ tags:
 
 ## 段落
 
-### 空行分段
+#### 空行分段
 
         第一段内容。
 
@@ -47,7 +44,7 @@ tags:
 
 第二段和第一段间有一空行。
 
-### 自动续行
+#### 自动续行
 
         一个回车不分段，
         本行续上行。(GFM保持段落内换行符)
@@ -56,13 +53,13 @@ tags:
 一个回车不分段，
 本行续上行。(GFM保持段落内换行符)
 
-### 插入换行
+#### 插入换行
 
         行尾两空格  保持换行。
 
 行尾两空格  保持换行。
 
-### 段落缩进
+#### 段落缩进
 
         邮件体段落缩进：
 
@@ -84,7 +81,7 @@ tags:
 -----
 
 ## 代码块
-### 代码块(标准)
+#### 代码块(标准)
 
 四个空格缩进是代码块
 
@@ -94,7 +91,7 @@ tags:
 
 > 说明：本文显示的所有Markdown代码均是通过四个空格缩进实现
 
-### 代码块(gfm扩展)
+#### 代码块(gfm扩展)
 
 【gfm】三个连续的`或~等符号界定代码块。
 
@@ -123,7 +120,7 @@ puts md.to_html
 ~~~
 
 ## 列表
-### 无序列表
+#### 无序列表
 
     * 星号、减号、加号开始列表。
 
@@ -141,7 +138,7 @@ puts md.to_html
 
 * 返回一级列表。
   
-### 有序列表
+#### 有序列表
     1. 数字和点开始有序列表。
 
       1. 注意子列表的缩进位置。
@@ -164,7 +161,7 @@ puts md.to_html
 
 1. 返回一级列表。
 
-### 列表续行、段落和代码块
+#### 列表续行、段落和代码块
     1. 列表项可以折行，
       对齐则自动续行。
 
@@ -189,7 +186,7 @@ puts md.to_html
 
         $ printf "Hello, world.\n"
 
-### 定义（无）
+#### 定义（无）
 
 ----
 
@@ -206,14 +203,14 @@ ___
 
 ## 字体
 
-### 粗体和斜体
+#### 粗体和斜体
     这些都是 **粗体** 或 __粗体__ ，
     这些都是 *斜体* 或 _斜体_ 。
 
 这些都是 **粗体** 或 __粗体__ ，
 这些都是 *斜体* 或 _斜体_ 。
 
-### 删除线
+#### 删除线
 
     ~~删除线~~ 效果
 
@@ -223,13 +220,13 @@ ___
 
 
 
-### 下划线
+#### 下划线
 
     <u>下划线</u> 效果
 
 <u>下划线</u> 效果
 
-### 上标、下标
+#### 上标、下标
 
     Water: H<sub>2</sub>O
     E = mc<sup>2</sup>
@@ -239,25 +236,25 @@ Water: H<sub>2</sub>O
 E = mc<sup>2</sup>
 注解：通过直接嵌入HTML代码实现。
 
-### 等宽字体
+#### 等宽字体
     行内反引号嵌入代码，如: `git status` 。
 
 行内反引号嵌入代码，如: `git status` 。
 
-### 引言(无)
-### 清除标记空白(无)
+#### 引言(无)
+#### 清除标记空白(无)
 
 ---
 
 ## 链接
-### URL自动链接(gfm)
+#### URL自动链接(gfm)
     网址 http://github.com/
     邮件 me@foo.bar
 
 网址 http://github.com/
 邮件 me@foo.bar
 
-### 文字链接
+#### 文字链接
     - 访问 [Google](http://google.com "Search")
     - 访问 [GitHub][1]
     - 访问 [WorldHello][]
@@ -272,7 +269,7 @@ E = mc<sup>2</sup>
  [1]: http://github.com "Git host"
  [worldhello]: http://www.worldhello.ne
 
-### 内部跳转
+#### 内部跳转
     <a name="md-anchor" id="md-anchor"></a>
 
     跳转至 [文内链接](#md-anchor) 。
@@ -285,7 +282,7 @@ E = mc<sup>2</sup>
 
 跳转至 [删除线](#删除线) 。
 
-### 脚注(扩展实现)
+#### 脚注(扩展实现)
 
         [^孔子]: 子指孔子，中国古代最有影响力的思想家、教育家！
 
@@ -338,7 +335,7 @@ left  | center | right
 ---
 
 ## 其它
-### 混用HTML
+#### 混用HTML
     <div style="background:#bbb;">
       HTML块中不能混用 **标记语法**
     </div>
@@ -349,7 +346,7 @@ left  | center | right
 
 ---
 
-### 其它说明
+#### 其它说明
 * Markdown是在Ruby应用中广泛使用的标记语言，语法简洁并可混用HTML。
 标准的Markdown语法缺乏如表格等关键特性的支持，
 虽然不同的解析器都对其语法进行了扩展，但实现各有不同，造成一定的混乱。
@@ -360,4 +357,4 @@ left  | center | right
 
 ---
 
-### 本文档用Markdown写成！
+#### 本文档用Markdown写成！
