--- a/_posts/2018-08-03-简简单单给个人博客增加访问统计.md
+++ b/_posts/2018-08-03-简简单单给个人博客增加访问统计.md
@@ -38,19 +38,26 @@ tags:
 >> 保存，即可。
 
 #### 成功，打开你的个人博客！
+
 > 此时，你就可以看到网站下面，“Copyright ......”这一句后面，多出了一句：“本站总访问量1次”。
 > 恭喜，加入访问统计成功！
 
-## 增加其他统计：总访客数和总阅读量
-> 非常简单，第二行代码中，"busuanzi_value_site_pv"就是总访问量。
+## 增加其他统计：总访客数
+
+> **单个用户连续点击n篇文章，只记录1次访客数**
 > “busuanzi_value_site_uv”是总访客数。如果要加总访客数，加上这样一句就可以：
 >>
 >>          <span id="busuanzi_container_site_uv">本站总访客数<span id="busuanzi_value_site_uv"></span>人
 >>
-> “busuanzi_value_page_pv”是总阅读量，就是把全部页面的访问量汇总了。如果要汇总后的访问量，加上这样一句：
+
+## 增加其他统计：显示单页面访问量
+
+> **单个用户点击1篇文章，本篇文章记录1次阅读量。**
+> “busuanzi_value_page_pv”是单页面阅读量：
 >>
->>          <span id="busuanzi_container_page_pv">本站总阅读量<span id="busuanzi_value_page_pv"></span>次
+>>          <span id="busuanzi_container_page_pv">本文总阅读量<span id="busuanzi_value_page_pv"></span>次
 >>
 >> 保存即可，恭喜，又升级了一步！
+
 
 备注：以上是直接操作Github服务器上的文件（在你的github工程上），如果是在本地编辑，记得上传（或者）push到Github！
