--- a/_posts/2018-08-06-dig工具使用手册.md
+++ b/_posts/2018-08-06-dig工具使用手册.md
@@ -3,7 +3,7 @@ layout:     post
 title:      DNS 查询工具说明 － dig
 subtitle:   dig工具使用手册
 date:       2018-08-06
-author:     BY
+author:     LZP（整理）
 header-img: img/bg-it1.jpg
 catalog: true
 tags:
